--- a/packages/plasma-web/package.json
+++ b/packages/plasma-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-web",
-  "version": "1.610.0",
+  "version": "1.611.0-next-insol.0",
   "description": "Salute Design System / React UI kit for web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "exports": {
@@ -32,10 +32,10 @@
     "directory": "packages/plasma-web"
   },
   "dependencies": {
-    "@salutejs/plasma-core": "1.217.0",
-    "@salutejs/plasma-hope": "1.363.0",
-    "@salutejs/plasma-new-hope": "0.352.0",
-    "@salutejs/plasma-themes": "0.41.0",
+    "@salutejs/plasma-core": "1.218.0-next-insol.0",
+    "@salutejs/plasma-hope": "1.364.0-next-insol.0",
+    "@salutejs/plasma-new-hope": "0.353.0-next-insol.0",
+    "@salutejs/plasma-themes": "0.42.0-next-insol.0",
     "@salutejs/plasma-tokens-b2b": "1.54.0",
     "@salutejs/plasma-tokens-b2c": "0.65.0",
     "@salutejs/plasma-tokens-web": "1.69.0",
@@ -62,9 +62,9 @@
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-cy-utils": "0.147.0",
+    "@salutejs/plasma-cy-utils": "0.148.0-next-insol.0",
     "@salutejs/plasma-icons": "1.229.0",
-    "@salutejs/plasma-sb-utils": "0.217.0",
+    "@salutejs/plasma-sb-utils": "0.218.0-next-insol.0",
     "@types/node": "16.7.13",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
