--- a/packages/sdds-cs/package.json
+++ b/packages/sdds-cs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-cs",
-  "version": "0.344.0",
+  "version": "0.345.0-next-insol.0",
   "description": "Salute Design System / React UI kit for SDDS CS web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "exports": {
@@ -32,8 +32,8 @@
     "directory": "packages/sdds-cs"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.352.0",
-    "@salutejs/sdds-themes": "0.56.0"
+    "@salutejs/plasma-new-hope": "0.353.0-next-insol.0",
+    "@salutejs/sdds-themes": "0.57.0-next-insol.0"
   },
   "peerDependencies": {
     "@emotion/react": ">=11",
@@ -56,10 +56,10 @@
     "@microsoft/api-extractor": "7.38.3",
     "@originjs/vite-plugin-commonjs": "1.0.3",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.217.0",
-    "@salutejs/plasma-cy-utils": "0.147.0",
+    "@salutejs/plasma-core": "1.218.0-next-insol.0",
+    "@salutejs/plasma-cy-utils": "0.148.0-next-insol.0",
     "@salutejs/plasma-icons": "1.229.0",
-    "@salutejs/plasma-sb-utils": "0.217.0",
+    "@salutejs/plasma-sb-utils": "0.218.0-next-insol.0",
     "@types/node": "16.7.13",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
