--- a/packages/sdds-dfa/package.json
+++ b/packages/sdds-dfa/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-dfa",
-  "version": "0.338.0",
+  "version": "0.339.0-next-insol.0",
   "description": "Salute Design System / React UI kit for SDDS DFA web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "exports": {
@@ -27,8 +27,8 @@
     "directory": "packages/sdds-dfa"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.352.0",
-    "@salutejs/sdds-themes": "0.56.0"
+    "@salutejs/plasma-new-hope": "0.353.0-next-insol.0",
+    "@salutejs/sdds-themes": "0.57.0-next-insol.0"
   },
   "peerDependencies": {
     "react": ">=16.13.1",
@@ -45,10 +45,10 @@
     "@babel/preset-typescript": "7.24.1",
     "@microsoft/api-extractor": "7.38.3",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.217.0",
-    "@salutejs/plasma-cy-utils": "0.147.0",
+    "@salutejs/plasma-core": "1.218.0-next-insol.0",
+    "@salutejs/plasma-cy-utils": "0.148.0-next-insol.0",
     "@salutejs/plasma-icons": "1.229.0",
-    "@salutejs/plasma-sb-utils": "0.217.0",
+    "@salutejs/plasma-sb-utils": "0.218.0-next-insol.0",
     "@types/node": "16.7.13",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
