--- a/website/plasma-website/package.json
+++ b/website/plasma-website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-website",
-  "version": "0.573.0",
+  "version": "0.574.0-next-insol.0",
   "description": "Plasma Main App",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,10 +19,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@salutejs/plasma-b2c": "1.608.0",
+    "@salutejs/plasma-b2c": "1.609.0-next-insol.0",
     "@salutejs/plasma-colors": "0.16.0",
     "@salutejs/plasma-icons": "1.229.0",
-    "@salutejs/plasma-tokens": "1.129.0",
+    "@salutejs/plasma-tokens": "1.130.0-next-insol.0",
     "@salutejs/plasma-tokens-b2c": "0.65.0",
     "@salutejs/plasma-typo": "0.42.0",
     "classnames": "^2.5.1",
