--- a/website/sdds-scan-docs/package.json
+++ b/website/sdds-scan-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-scan-docs",
-  "version": "0.29.0",
+  "version": "0.30.0-next-insol.0",
   "description": "SDDS-SCAN documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,11 +31,11 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.521.0",
+    "@salutejs/plasma-docs-ui": "0.522.0-next-insol.0",
     "@salutejs/plasma-icons": "1.229.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/sdds-scan": "0.338.0",
-    "@salutejs/sdds-themes": "0.56.0",
+    "@salutejs/sdds-scan": "0.339.0-next-insol.0",
+    "@salutejs/sdds-themes": "0.57.0-next-insol.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
     "docusaurus-theme-search-typesense": "0.25.0",
